RESOLVED FIXED296186
[shape-outside] Gradient based shape-outside floating fails when rtl is applied
https://bugs.webkit.org/show_bug.cgi?id=296186
Summary [shape-outside] Gradient based shape-outside floating fails when rtl is applied
alan
Reported 2025-07-18 07:54:46 PDT
ssia
Attachments
[fast-cq]Patch (7.88 KB, patch)
2025-07-18 07:59 PDT, alan
no flags
alan
Comment 1 2025-07-18 07:59:12 PDT
Created attachment 476090 [details] [fast-cq]Patch
EWS
Comment 2 2025-07-18 12:17:07 PDT
Committed 297611@main (ba8ea84b32be): <https://commits.webkit.org/297611@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 476090 [details].
Radar WebKit Bug Importer
Comment 3 2025-07-18 12:20:38 PDT
Tim Nguyen (:ntim)
Comment 4 2025-08-22 22:31:48 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/54483
Note You need to log in before you can comment on or make changes to this bug.