[shape-outside] Gradient based shape-outside floating fails when rtl is applied https://bugs.webkit.org/show_bug.cgi?id=296186

Reviewed by Simon Fraser.

IFC expects logical float coordinates for shapes while RasterLayoutShape provides physical.
This change aligns RasterLayoutShape::getExcludedInterval's logic with other type of shapes, see RectangleLayoutShape::getExcludedInterval.

* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/shape-outside/shape-image/gradients/reference/shape-outside-linear-gradient-horizontal-rtl-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/shape-outside/shape-image/gradients/shape-outside-linear-gradient-horizontal-rtl-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/shape-outside/shape-image/gradients/shape-outside-linear-gradient-horizontal-rtl.html: Added.
* Source/WebCore/rendering/shapes/RasterLayoutShape.cpp:
(WebCore::RasterLayoutShape::getExcludedInterval const):

Canonical link: https://commits.webkit.org/297611@main